syntax = "proto3";

package com.example.paymentService;

message PaymentRequest {
    string order_id = 1;
    double amount = 2;
}

message PaymentResponse {
    string status = 1;
}

service PaymentService {
    rpc processPayment(PaymentRequest) returns (PaymentResponse);
}
